[package]
name = "iana"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"
exclude = [
    "data/",
]

[[bin]]
name = "sync"
path = "src/bin/sync.rs"
required-features = ["sync"]

[[bin]]
name = "parse"
path = "src/bin/parse.rs"
required-features = ["parse"]

[[bin]]
name = "lookup"
path = "src/bin/lookup.rs"
required-features = [ ]


[dependencies]
log = "0.4"
env_logger = { version = "0.6", default-features = false, features = [ "termcolor", "atty", "humantime" ] }
clap       = { version = "2.33", optional = true }
futures    = { version = "0.1", optional = true }
tokio-core = { version = "0.1", optional = true }
hyper      = { version = "0.11", optional = true }
hyper-tls  = { version = "0.1", optional = true }

smoltcp = { version = "0.5", optional = true, default-features = false, features = [ "std", "log", "proto-ipv4", "proto-ipv6" ] }

[dev-dependencies]


[features]
default = [ ]
sync  = [ "clap", "smoltcp", "futures", "tokio-core", "hyper", "hyper-tls" ]
parse = [ "clap", "smoltcp" ]

