[package]
name = "iana-tool"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@protonmail.com>"]


[dependencies]
log = "0.4"
env_logger = "0.5"
clap = "2.29"
futures = "0.1"
tokio-core = "0.1"
flate2 = "1.0"
hyper = "0.11"
hyper-tls = "0.1"
ip-db = { path = "../" }

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
branch = "master"
default-features = false
features = [
    "std", "log",
    "proto-ipv4", "proto-ipv6",
    "socket-raw", "socket-icmp", "socket-udp", "socket-tcp"
]

